--- a/app/src/main/res/layout/activity_new_social.xml
+++ b/app/src/main/res/layout/activity_new_social.xml
@@ -57,4 +57,18 @@
         app:layout_constraintLeft_toLeftOf="@+id/buttonUploadPicture"
         android:hint="Date" />
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@mipmap/ic_launcher"
+        android:id="@+id/mImageView"
+        android:layout_marginStart="8dp"
+        app:layout_constraintLeft_toRightOf="@+id/buttonUploadPicture"
+        android:layout_marginLeft="8dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="16dp"
+        app:layout_constraintTop_toTopOf="@+id/buttonUploadPicture"
+        app:layout_constraintHorizontal_bias="0.45" />
+
 </android.support.constraint.ConstraintLayout>
