working nav drawer

--- a/app/src/main/res/layout/activity_new_social.xml
+++ b/app/src/main/res/layout/activity_new_social.xml
@@ -14,7 +14,7 @@
         android:ems="10"
         android:id="@+id/editTextEventName"
         android:hint="Name of Event"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="24dp"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginStart="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -30,12 +30,9 @@
         android:ems="10"
         android:id="@+id/editTextDescription"
         android:hint="Description"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="192dp"
-        app:layout_constraintLeft_toLeftOf="@+id/editTextDate"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/editTextDate"
-        app:layout_constraintVertical_bias="0.060000002" />
+        app:layout_constraintLeft_toLeftOf="@+id/editTextDate" />
 
     <Button
         android:text="Upload a Picture"
@@ -43,8 +40,8 @@
         android:layout_height="wrap_content"
         android:id="@+id/buttonUploadPicture"
         android:layout_marginTop="24dp"
-        app:layout_constraintTop_toBottomOf="@+id/editTextEventName"
-        app:layout_constraintLeft_toLeftOf="@+id/editTextEventName" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextDescription"
+        app:layout_constraintLeft_toLeftOf="@+id/editTextDescription" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -52,23 +49,33 @@
         android:inputType="datetime"
         android:ems="10"
         android:id="@+id/editTextDate"
-        android:layout_marginTop="40dp"
-        app:layout_constraintTop_toBottomOf="@+id/buttonUploadPicture"
-        app:layout_constraintLeft_toLeftOf="@+id/buttonUploadPicture"
-        android:hint="Date" />
+        android:hint="Date"
+        app:layout_constraintLeft_toLeftOf="@+id/editTextEventName"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/editTextEventName" />
 
     <ImageView
+        app:srcCompat="@drawable/common_full_open_on_phone"
+        android:id="@+id/imageViewUploadPhoto"
+        android:layout_marginTop="32dp"
+        app:layout_constraintTop_toBottomOf="@+id/buttonUploadPicture"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        app:layout_constraintLeft_toLeftOf="@+id/buttonUploadPicture" />
+
+    <Button
+        android:text="Post"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@mipmap/ic_launcher"
-        android:id="@+id/mImageView"
-        android:layout_marginStart="8dp"
-        app:layout_constraintLeft_toRightOf="@+id/buttonUploadPicture"
-        android:layout_marginLeft="8dp"
+        android:id="@+id/buttonPost"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="16dp"
         android:layout_marginEnd="16dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginRight="16dp"
-        app:layout_constraintTop_toTopOf="@+id/buttonUploadPicture"
-        app:layout_constraintHorizontal_bias="0.45" />
+        android:layout_marginStart="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="16dp"
+        style="@style/Widget.AppCompat.Button.Colored" />
 
 </android.support.constraint.ConstraintLayout>
