--- a/app/src/main/res/layout/activity_user_area.xml
+++ b/app/src/main/res/layout/activity_user_area.xml
@@ -1,38 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<android.support.v4.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_user_area"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="io.github.sumukhshiv.mdbsocials.UserArea">
+    android:layout_height="match_parent">
 
-    <Button
-        android:text="Logout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/buttonLogout"
-        tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="96dp"
-        android:layout_marginStart="16dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="16dp"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginRight="16dp" />
+    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/activity_user_area"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context="io.github.sumukhshiv.mdbsocials.UserArea">
 
-    <Button
-        android:text="Create New Social"
-        android:layout_width="wrap_content"
+        <!--<Button-->
+            <!--android:text="Logout"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:id="@+id/buttonLogout"-->
+            <!--tools:layout_constraintBottom_creator="1"-->
+            <!--app:layout_constraintBottom_toBottomOf="parent"-->
+            <!--android:layout_marginBottom="24dp"-->
+            <!--android:layout_marginStart="16dp"-->
+            <!--app:layout_constraintLeft_toLeftOf="parent"-->
+            <!--android:layout_marginLeft="16dp"-->
+            <!--android:layout_marginEnd="16dp"-->
+            <!--app:layout_constraintRight_toRightOf="parent"-->
+            <!--android:layout_marginRight="16dp" />-->
+
+        <!--<Button-->
+            <!--android:text="Create New Social"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:id="@+id/buttonNewSocial"-->
+            <!--android:layout_marginEnd="16dp"-->
+            <!--app:layout_constraintRight_toRightOf="parent"-->
+            <!--android:layout_marginRight="16dp"-->
+            <!--app:layout_constraintBottom_toTopOf="@+id/buttonLogout"-->
+            <!--android:layout_marginBottom="8dp"-->
+            <!--android:layout_marginStart="16dp"-->
+            <!--app:layout_constraintLeft_toLeftOf="parent"-->
+            <!--android:layout_marginLeft="16dp" />-->
+
+        <!--<Button-->
+            <!--android:text="Update Profile"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:id="@+id/buttonUpdateProfile"-->
+            <!--app:layout_constraintBottom_toTopOf="@+id/buttonNewSocial"-->
+            <!--android:layout_marginEnd="16dp"-->
+            <!--app:layout_constraintRight_toRightOf="parent"-->
+            <!--android:layout_marginRight="16dp"-->
+            <!--android:layout_marginStart="16dp"-->
+            <!--app:layout_constraintLeft_toLeftOf="parent"-->
+            <!--android:layout_marginLeft="16dp"-->
+            <!--android:layout_marginBottom="8dp" />-->
+
+
+
+    </android.support.constraint.ConstraintLayout>
+
+    <ListView
+        android:id="@+id/navList"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:id="@+id/buttonNewSocial"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginRight="16dp"
-        android:layout_marginStart="16dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="16dp" />
-</android.support.constraint.ConstraintLayout>
+        android:layout_weight="1"
+        android:layout_gravity="start"
+        android:background="#FFFFFFFF"
+        android:choiceMode="singleChoice"
+        android:clickable="true"/>
+
+</android.support.v4.widget.DrawerLayout>
