Working RecyclerView and Primitive Detail Screen

--- a/app/src/main/res/layout/activity_user_area.xml
+++ b/app/src/main/res/layout/activity_user_area.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
@@ -58,7 +59,12 @@
             <!--android:layout_marginBottom="8dp" />-->
 
 
-
+        <android.support.v7.widget.RecyclerView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:layout_editor_absoluteY="179dp"
+            tools:layout_editor_absoluteX="79dp"
+            android:id="@+id/recyclerViewFeed" />
     </android.support.constraint.ConstraintLayout>
 
     <ListView
