--- a/app/src/main/res/layout/activity_detail_screen.xml
+++ b/app/src/main/res/layout/activity_detail_screen.xml
@@ -19,11 +19,11 @@
         android:layout_marginLeft="16dp"
         android:layout_marginEnd="16dp"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginRight="16dp" />
+        android:layout_marginRight="16dp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
 
     <ImageView
-        android:layout_width="72dp"
-        android:layout_height="72dp"
+        android:layout_width="100dp"
         app:srcCompat="@mipmap/ic_launcher"
         android:id="@+id/imageViewDetail"
         android:layout_marginTop="40dp"
@@ -33,7 +33,8 @@
         android:layout_marginLeft="16dp"
         android:layout_marginEnd="16dp"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginRight="16dp" />
+        android:layout_marginRight="16dp"
+        android:layout_height="100dp" />
 
     <TextView
         android:text="TextView"
@@ -54,21 +55,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/buttonInterstedDetail"
-        android:layout_marginTop="32dp"
-        app:layout_constraintTop_toBottomOf="@+id/textViewEmailDetail"
+        style="@style/Widget.AppCompat.Button.Colored"
         android:layout_marginStart="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginLeft="16dp"
         android:layout_marginEnd="16dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginRight="16dp"
-        style="@style/Widget.AppCompat.Button.Borderless.Colored" />
+        app:layout_constraintTop_toTopOf="@+id/textViewDescription"
+        android:layout_marginTop="56dp" />
 
-    <CheckBox
-        android:text="CheckBox"
+    <Button
+        android:text="Interested?"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/checkBoxInterestedDetail"
+        android:id="@+id/buttonAreYouInterested"
         android:layout_marginTop="32dp"
         app:layout_constraintTop_toBottomOf="@+id/buttonInterstedDetail"
         android:layout_marginStart="16dp"
@@ -77,4 +78,19 @@
         android:layout_marginEnd="16dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginRight="16dp" />
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textViewDescription"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="16dp"
+        android:layout_marginStart="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="24dp"
+        app:layout_constraintTop_toBottomOf="@+id/textViewEmailDetail" />
+
 </android.support.constraint.ConstraintLayout>
