--- a/app/src/main/res/layout/activity_user_area.xml
+++ b/app/src/main/res/layout/activity_user_area.xml
@@ -60,11 +60,17 @@
 
 
         <android.support.v7.widget.RecyclerView
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:layout_editor_absoluteY="179dp"
-            tools:layout_editor_absoluteX="79dp"
-            android:id="@+id/recyclerViewFeed" />
+            tools:layout_editor_absoluteY="29dp"
+            android:id="@+id/recyclerViewFeed"
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginLeft="16dp"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginRight="16dp"
+            android:layout_width="0dp"
+            app:layout_constraintHorizontal_bias="0.37" />
     </android.support.constraint.ConstraintLayout>
 
     <ListView
