--- a/app/src/main/res/layout/row_view.xml
+++ b/app/src/main/res/layout/row_view.xml
@@ -14,48 +14,46 @@
             android:layout_height="wrap_content"
             app:srcCompat="@mipmap/ic_launcher"
             android:id="@+id/imageViewSocialImage"
-            android:layout_marginTop="16dp"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginStart="24dp"
+            android:layout_marginStart="16dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginLeft="24dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="16dp" />
+            android:layout_marginLeft="16dp"
+            app:layout_constraintTop_toTopOf="@+id/textViewEventName"
+            app:layout_constraintBottom_toBottomOf="@+id/textViewNumberInterested"
+            app:layout_constraintVertical_bias="0.22" />
 
         <TextView
             android:text="TextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/textViewEventName"
-            app:layout_constraintTop_toTopOf="@+id/imageViewSocialImage"
-            app:layout_constraintBottom_toBottomOf="@+id/imageViewSocialImage"
-            android:layout_marginStart="32dp"
-            app:layout_constraintLeft_toRightOf="@+id/imageViewSocialImage"
-            android:layout_marginLeft="32dp"
-            app:layout_constraintVertical_bias="0.52" />
+            tools:layout_constraintTop_creator="1"
+            tools:layout_constraintRight_creator="1"
+            app:layout_constraintRight_toRightOf="parent"
+            tools:layout_constraintLeft_creator="1"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintHorizontal_bias="0.25"
+            android:layout_marginTop="8dp" />
 
         <TextView
             android:text="TextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/textViewHostEmail"
-            app:layout_constraintTop_toTopOf="@+id/textViewEventName"
-            app:layout_constraintBottom_toBottomOf="@+id/textViewEventName"
-            android:layout_marginStart="40dp"
-            app:layout_constraintLeft_toRightOf="@+id/textViewEventName"
-            android:layout_marginLeft="40dp"
-            app:layout_constraintVertical_bias="0.0" />
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/textViewEventName"
+            app:layout_constraintLeft_toLeftOf="@+id/textViewEventName"
+            app:layout_constraintBottom_toTopOf="@+id/textViewNumberInterested"
+            android:layout_marginBottom="8dp" />
 
         <TextView
             android:text="TextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/textViewNumberInterested"
-            android:layout_marginStart="40dp"
-            app:layout_constraintLeft_toRightOf="@+id/textViewHostEmail"
-            android:layout_marginLeft="40dp"
-            app:layout_constraintTop_toTopOf="@+id/textViewHostEmail"
-            app:layout_constraintBottom_toBottomOf="@+id/textViewHostEmail"
-            app:layout_constraintVertical_bias="0.0" />
+            tools:layout_constraintBottom_creator="1"
+            app:layout_constraintBottom_toBottomOf="parent"
+            tools:layout_constraintLeft_creator="1"
+            app:layout_constraintLeft_toLeftOf="@+id/textViewHostEmail" />
     </android.support.constraint.ConstraintLayout>
 </android.support.v7.widget.CardView>
