--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -13,7 +13,7 @@
         android:inputType="textPersonName"
         android:ems="10"
         android:id="@+id/editTextUpdateName"
-        android:hint="Full Name"
+        android:hint="@string/full_name"
         android:layout_marginTop="40dp"
         app:layout_constraintTop_toBottomOf="@+id/textView"
         android:layout_marginEnd="16dp"
@@ -40,7 +40,7 @@
         android:layout_marginBottom="8dp" />
 
     <TextView
-        android:text="Update Your Profile"
+        android:text="@string/update_your_profile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textView"
@@ -56,7 +56,7 @@
         app:layout_constraintHorizontal_bias="0.54" />
 
     <Button
-        android:text="Save"
+        android:text="@string/save"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/buttonSaveProfileUpdate"
