--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -8,7 +8,7 @@
     tools:context="io.github.sumukhshiv.mdbsocials.SignUpActivity">
 
     <TextView
-        android:text="Signup"
+        android:text="@string/signup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textViewSignUpTitle"
@@ -27,7 +27,7 @@
         android:inputType="textEmailAddress"
         android:ems="10"
         android:id="@+id/editTextEmailSignUp"
-        android:hint="Email"
+        android:hint="@string/email2"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/textViewSignUpTitle"
         android:layout_marginStart="16dp"
@@ -43,7 +43,7 @@
         android:inputType="textPassword"
         android:ems="10"
         android:id="@+id/editTextPasswordSignup"
-        android:hint="Password"
+        android:hint="@string/password2"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/editTextEmailSignUp"
         app:layout_constraintLeft_toLeftOf="@+id/editTextEmailSignUp" />
@@ -57,7 +57,7 @@
         app:layout_constraintLeft_toLeftOf="@+id/editTextPasswordSignup" />
 
     <Button
-        android:text="Register"
+        android:text="@string/register2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/buttonRegisterSignUp"
