--- a/app/src/main/res/layout/row_view2.xml
+++ b/app/src/main/res/layout/row_view2.xml
@@ -22,7 +22,7 @@
             android:layout_marginLeft="16dp" />
 
         <TextView
-            android:text="TextView"
+            android:text="@string/textview6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/textViewInterestedMember"
