--- a/app/src/main/res/layout/activity_detail_screen.xml
+++ b/app/src/main/res/layout/activity_detail_screen.xml
@@ -12,6 +12,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textViewEventNameDetail"
+        android:textAllCaps="true"
+        android:fontFamily="sans-serif-bold"
+        android:gravity="center"
+        android:textSize="45sp"
+        android:textColor="#008080"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginStart="16dp"
@@ -23,10 +28,10 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
 
     <ImageView
-        android:layout_width="100dp"
+        android:layout_width="294dp"
         app:srcCompat="@mipmap/ic_launcher"
         android:id="@+id/imageViewDetail"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="12dp"
         app:layout_constraintTop_toBottomOf="@+id/textViewEventNameDetail"
         android:layout_marginStart="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -34,21 +39,25 @@
         android:layout_marginEnd="16dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginRight="16dp"
-        android:layout_height="100dp" />
+        android:layout_height="232dp" />
 
     <TextView
         android:text="@string/textview2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textViewEmailDetail"
-        android:layout_marginTop="40dp"
-        app:layout_constraintTop_toBottomOf="@+id/imageViewDetail"
+        android:textSize="25sp"
+        android:fontFamily="sans-serif-light"
+        android:textColor="#000000"
         android:layout_marginEnd="16dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginRight="16dp"
         android:layout_marginStart="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="16dp" />
+        android:layout_marginLeft="16dp"
+        app:layout_constraintHorizontal_bias="0.501"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/imageViewDetail" />
 
     <Button
         android:text="@string/button"
@@ -62,22 +71,23 @@
         android:layout_marginEnd="16dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginRight="16dp"
-        app:layout_constraintTop_toTopOf="@+id/textViewDescription"
-        android:layout_marginTop="56dp" />
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/buttonAreYouInterested" />
 
     <Button
         android:text="@string/interested"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/buttonAreYouInterested"
-        android:layout_marginTop="32dp"
-        app:layout_constraintTop_toBottomOf="@+id/buttonInterstedDetail"
         android:layout_marginStart="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginLeft="16dp"
         android:layout_marginEnd="16dp"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginRight="16dp" />
+        android:layout_marginRight="16dp"
+        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp" />
 
     <TextView
         android:text="@string/textview3"
@@ -85,12 +95,17 @@
         android:layout_height="wrap_content"
         android:id="@+id/textViewDescription"
         android:layout_marginEnd="16dp"
+        android:textSize="20sp"
+        android:gravity="center"
+        android:fontFamily="sans-serif-light"
+        android:textColor="#000000"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginRight="16dp"
         android:layout_marginStart="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="24dp"
+        app:layout_constraintHorizontal_bias="0.501"
+        android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/textViewEmailDetail" />
 
 </android.support.constraint.ConstraintLayout>
