--- a/app/src/main/res/layout/row_view.xml
+++ b/app/src/main/res/layout/row_view.xml
@@ -2,7 +2,10 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent" android:layout_height="wrap_content"
+    card_view:cardCornerRadius="4dp"
+    android:layout_margin="5dp"
     android:id="@+id/cardViewFeed">
 
     <android.support.constraint.ConstraintLayout
@@ -17,9 +20,10 @@
             android:layout_marginStart="16dp"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginLeft="16dp"
-            app:layout_constraintTop_toTopOf="@+id/textViewEventName"
-            app:layout_constraintBottom_toBottomOf="@+id/textViewNumberInterested"
-            app:layout_constraintVertical_bias="0.22" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="8dp" />
 
         <TextView
             android:text="TextView"
@@ -28,12 +32,15 @@
             android:id="@+id/textViewEventName"
             tools:layout_constraintTop_creator="1"
             tools:layout_constraintRight_creator="1"
-            app:layout_constraintRight_toRightOf="parent"
             tools:layout_constraintLeft_creator="1"
-            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintLeft_toRightOf="@+id/imageViewSocialImage"
+            android:layout_marginLeft="41dp"
+            android:fontFamily="sans-serif-bold"
+            android:textSize="20sp"
+            android:textAllCaps="true"
+            android:textColor="#008080"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintHorizontal_bias="0.25"
-            android:layout_marginTop="8dp" />
+            android:layout_marginTop="16dp" />
 
         <TextView
             android:text="@string/textview4"
@@ -41,6 +48,9 @@
             android:layout_height="wrap_content"
             android:id="@+id/textViewHostEmail"
             android:layout_marginTop="8dp"
+            android:fontFamily="sans-serif-light"
+            android:textSize="15sp"
+            android:textColor="#000000"
             app:layout_constraintTop_toBottomOf="@+id/textViewEventName"
             app:layout_constraintLeft_toLeftOf="@+id/textViewEventName"
             app:layout_constraintBottom_toTopOf="@+id/textViewNumberInterested"
@@ -51,9 +61,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/textViewNumberInterested"
+            android:fontFamily="sans-serif-light"
+            android:textSize="15sp"
+            android:textColor="#000000"
             tools:layout_constraintBottom_creator="1"
             app:layout_constraintBottom_toBottomOf="parent"
             tools:layout_constraintLeft_creator="1"
-            app:layout_constraintLeft_toLeftOf="@+id/textViewHostEmail" />
+            app:layout_constraintLeft_toLeftOf="@+id/textViewHostEmail"
+            android:layout_marginBottom="8dp" />
     </android.support.constraint.ConstraintLayout>
 </android.support.v7.widget.CardView>
