--- a/app/src/main/res/layout/row_view2.xml
+++ b/app/src/main/res/layout/row_view2.xml
@@ -2,35 +2,30 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent" android:layout_height="wrap_content">
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent" android:layout_height="wrap_content"
+    card_view:cardCornerRadius="4dp"
+    android:layout_margin="5dp">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:srcCompat="@mipmap/ic_launcher"
-            android:id="@+id/imageViewProfilePicture"
-            android:layout_marginTop="16dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="16dp"
-            android:layout_marginStart="16dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginLeft="16dp" />
 
         <TextView
             android:text="@string/textview6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/textViewInterestedMember"
-            app:layout_constraintTop_toTopOf="@+id/imageViewProfilePicture"
-            app:layout_constraintBottom_toBottomOf="@+id/imageViewProfilePicture"
             android:layout_marginStart="80dp"
-            app:layout_constraintLeft_toRightOf="@+id/imageViewProfilePicture"
-            android:layout_marginLeft="80dp"
-            app:layout_constraintVertical_bias="0.52" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:textSize="20sp"
+            android:fontFamily="sans-serif-light"
+            android:textColor="#008080"
+            android:layout_marginTop="8dp"
+            app:layout_constraintVertical_bias="0.0"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent" />
     </android.support.constraint.ConstraintLayout>
 </android.support.v7.widget.CardView>
